@@ -54,15 +54,15 @@ function PMA_listBookmarks($db, $cfgBookmark)
     $query  = 'SELECT label, id FROM '. PMA_backquote($cfgBookmark['db']) . '.' . PMA_backquote($cfgBookmark['table'])
             . ' WHERE dbase = \'' . PMA_sqlAddslashes($db) . '\''
             . ' AND (user = \'' . PMA_sqlAddslashes($cfgBookmark['user']) . '\''
-            . '      OR user = \'\')';
+            . '      OR user = \'\')'
+            . ' ORDER BY label';
     $result = PMA_DBI_query($query, $dbh, PMA_DBI_QUERY_STORE);
 
     // There are some bookmarks -> store them
+    // use the unique id as the key
     if ($result > 0 && PMA_DBI_num_rows($result) > 0) {
-        $flag = 1;
         while ($row = PMA_DBI_fetch_row($result)) {
-            $bookmark_list[$flag . ' - ' . $row[0]] = $row[1];
-            $flag++;
+            $bookmark_list[$row[1]] = $row[0];
         } // end while
         return $bookmark_list;
     }
